test: fix spotless check